--- a/templates/knowledges_relation.html
+++ b/templates/knowledges_relation.html
@@ -143,7 +143,7 @@
 								option = {
 									// backgroundColor: "white",
 									title: {
-										text: '法考知识点逻辑关系图',
+										text: '法考知识图谱概览',
 										textStyle: {
 											// color: "white",
 											fontWeight: "lighter",
@@ -369,11 +369,16 @@
 												</span>
 											</a>
 										</li>
-
+                                        <li>
+											<a href="{{ url_for('add_search') }}">
+												<i class="fa fa-question-circle" style="width:24px"></i>
+												<span class="menu-title">
+													<strong>检索新生成的节点</strong>
+												</span>
+											</a>
+										</li>
 
 									</ul>
-
-
 
 								</div>
 							</div>
